# basepack-repo-server

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: main.rs  repo_metadata.rs
src/data/: legacy_packages.rs  mod.rs  packages.rs
src/data/items/: legacy_package.rs  mod.rs  package.rs
src/data/traits/: bzip2_compress.rs  into_kv.rs  mod.rs  (+2 more)
src/helpers/: database.rs  mod.rs  mongo_database.rs
src/macros/: kv.rs
src/routes/: cydia_icon_route.rs  download_route.rs  mod.rs  packages_bz2_route.rs  packages_route.rs  release_route.rs  root_route.rs  sileo_depiction_route.rs  sileo_featured_route.rs  status_route.rs
src/sileo/: mod.rs  sileo_depiction_auto_stack_view.rs  sileo_depiction_button_view.rs  sileo_depiction_font_weight.rs  sileo_depiction_header_view.rs  sileo_depiction_image_view.rs  sileo_depiction_label_view.rs  sileo_depiction_layer_view.rs  sileo_depiction_markdown_view.rs  sileo_depiction_orientation.rs  sileo_depiction_rating_view.rs  sileo_depiction_review_view.rs  sileo_depiction_screenshot.rs  sileo_depiction_screenshots_view.rs  sileo_depiction_separator_view.rs  sileo_depiction_spacer_view.rs  sileo_depiction_stack_view.rs  sileo_depiction_subheader_view.rs  sileo_depiction_tab_view.rs  sileo_depiction_table_button_view.rs  sileo_depiction_table_text_view.rs  sileo_depiction_video_view.rs  sileo_depiction_view.rs  sileo_depiction_view_alignment.rs  sileo_depiction_view_margins.rs  sileo_featured_banner.rs  sileo_featured_banners_view.rs  sileo_item_size.rs
(+9 files in other folders)
